--- a/.github/workflows/1.12.2 pack.yml
+++ b/.github/workflows/1.12.2 pack.yml
@@ -10,22 +10,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Checkout the repository to access the Dockerfile
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      # Checkout the repository to access the Dockerfile
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    # Log in to GitHub Container Registry
-    - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+      # Log in to GitHub Container Registry
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-    # Build and push the Docker image
-    - name: Build and Push Docker Image
-      uses: docker/build-push-action@v4
-      with:
-        context: src/1-12-2-pack
-        push: true
-        tags: ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
+      - name: Lowercase owner
+        id: lowercase_owner
+        run: |
+          echo "owner=${OWNER,,}" >>$GITHUB_OUTPUT
+        env:
+          OWNER: "${{ github.repository_owner }}"
+
+      # Build and push the Docker image
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v4
+        with:
+          context: src/1-12-2-pack
+          push: true
+          tags: ghcr.io/${{ steps.lowercase_owner.outputs.owner }}/${{ github.event.repository.name }}:latest
