--- a/.github/workflows/1.12.2 pack.yml
+++ b/.github/workflows/1.12.2 pack.yml
@@ -39,4 +39,4 @@ jobs:
         with:
           context: src/1-12-2-pack
           push: true
-          tags: ghcr.io/${{ steps.lowercase_owner.outputs.owner }}/${{ github.event.repository.name }}:latest
+          tags: ghcr.io/${{ steps.lowercase_owner.outputs.owner }}/${{ github.event.repository.name }}:1-12-2-pack
