chore: pin forge version

--- a/src/1-12-2-pack/Dockerfile
+++ b/src/1-12-2-pack/Dockerfile
@@ -11,5 +11,6 @@ ENV VERSION=1.12.2
 ENV GUI=false
 ENV STOP_DURATION=120
 ENV ALLOW_FLIGHT=true
+ENV FORGE_VERSION=14.23.5.2860
 
 VOLUME [ "/data/world" ]
