--- a/spectrum/files/config/vmp.properties
+++ b/spectrum/files/config/vmp.properties
@@ -1,5 +1,5 @@
 #Configuration file for VMP
-#Thu Mar 13 20:15:31 EET 2025
+#Sun Mar 16 01:33:30 UTC 2025
 exp_use_optimized_chunk_ticking_iteration=false
 optimized_entity_tracking_use_staging_area=true
 show_async_loading_messages=true
