fix: remove veinminer and set rps to both side

--- a/spectrum/Dockerfile
+++ b/spectrum/Dockerfile
@@ -7,6 +7,7 @@ ENV STOP_DURATION=120
 ENV FABRIC_LOADER_VERSION=0.16.10
 ENV ENABLE_COMMAND_BLOCK=true
 ENV JVM_XX_OPTS="-XX:+UseNUMA -XX:MaxTenuringThreshold=15 -XX:MaxGCPauseMillis=30 -XX:GCPauseIntervalMillis=150 -XX:-UseGCOverheadLimit -XX:SurvivorRatio=8 -XX:TargetSurvivorRatio=90 -Dfml.ignorePatchDiscrepancies=true -Dfml.ignoreInvalidMinecraftCertificates=true -XX:+UseCompressedOops -XX:+OptimizeStringConcat -XX:ReservedCodeCacheSize=2048m -XX:+UseCodeCacheFlushing -XX:SoftRefLRUPolicyMSPerMB=10000 -XX:ParallelGCThreads=10 -XX:ConcGCThreads=5 -Dsun.rmi.dgc.server.gcInterval=3600000 -Dsun.rmi.dgc.client.gcInterval=3600000 -XX:+UnlockExperimentalVMOptions -XX:G1NewSizePercent=20 -XX:G1ReservePercent=20 -XX:G1HeapRegionSize=32M"
+ENV PACKWIZ_URL=file:///data/pack.toml
 
 WORKDIR /data
 
