--- a/spectrum/resourcepacks/sparkles.pw.toml
+++ b/spectrum/resourcepacks/sparkles.pw.toml
@@ -1,6 +1,6 @@
 name = "Sparkles: Stardust Labs Resourcepack"
 filename = "Sparkles_1.21.x_v1.1.2.zip"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/HfNmMQ9E/versions/n4sbFHJm/Sparkles_1.21.x_v1.1.2.zip"
