--- a/spectrum/resourcepacks/angels-weather.pw.toml
+++ b/spectrum/resourcepacks/angels-weather.pw.toml
@@ -1,6 +1,6 @@
 name = "Angel's Weather"
 filename = "angels-weather.zip"
-side = "client"
+side = "server"
 
 [download]
 url = "https://cdn.modrinth.com/data/pQrAkcwB/versions/7Hi750rY/Angel%27s_Weather_Normal.zip"
