--- a/spectrum/resourcepacks/vvi.pw.toml
+++ b/spectrum/resourcepacks/vvi.pw.toml
@@ -1,6 +1,6 @@
 name = "Vocal Villagers"
 filename = "vvi.zip"
-side = "client"
+side = "server"
 
 [download]
 url = "https://cdn.modrinth.com/data/SEt2q8cl/versions/1G5ieTXP/%C2%A7a%C2%A7lVocal%20Villagers%20%C2%A7r%C2%A771.1.zip"
