--- a/.github/workflows/spectrum.yml
+++ b/.github/workflows/spectrum.yml
@@ -1,9 +1,12 @@
-name: Build and Push Docker Image
+name: Spectrum - Build and Push Docker Image
 
 on:
   push:
     branches:
       - main
+    paths:
+      - spectrum/**
+      - .github/workflows/spectrum.yml
 
 permissions:
   contents: read
