feat(spectrum): add some client mods

--- a/spectrum/mods/faster-random.pw.toml
+++ b/spectrum/mods/faster-random.pw.toml
@@ -1,6 +1,6 @@
 name = "Faster Random"
 filename = "faster-random.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/RfFxanNh/versions/BbFqiKvi/fasterrandom-5.1.0.jar"
