--- a/spectrum/mods/lithium.pw.toml
+++ b/spectrum/mods/lithium.pw.toml
@@ -1,6 +1,6 @@
 name = "Lithium"
 filename = "lithium.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/gvQqBUqZ/versions/MM5BBBOK/lithium-fabric-0.15.0%2Bmc1.21.1.jar"
