--- a/spectrum/mods/cloth-config.pw.toml
+++ b/spectrum/mods/cloth-config.pw.toml
@@ -1,6 +1,6 @@
 name = "Cloth Config API"
 filename = "cloth-config.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/9s6osm5g/versions/HpMb5wGb/cloth-config-15.0.140-fabric.jar"
