--- a/spectrum/mods/clumps.pw.toml
+++ b/spectrum/mods/clumps.pw.toml
@@ -1,6 +1,6 @@
 name = "Clumps"
 filename = "clumps.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/Wnxd13zP/versions/3ene3W1l/Clumps-fabric-1.21.1-19.0.0.1.jar"
