--- a/spectrum/mods/scalablelux.pw.toml
+++ b/spectrum/mods/scalablelux.pw.toml
@@ -1,6 +1,6 @@
 name = "ScalableLux"
 filename = "scalablelux.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/Ps1zyz6x/versions/Oh80nTJ5/ScalableLux-0.1.0%2Bfabric.26c6e72-all.jar"
