build(spectrum): build mrpack

--- a/.github/workflows/spectrum.yml
+++ b/.github/workflows/spectrum.yml
@@ -45,3 +45,20 @@ jobs:
           tags: |
             ghcr.io/${{ steps.lowercase_owner.outputs.owner }}/${{ github.event.repository.name }}:spectrum-latest
             ghcr.io/${{ steps.lowercase_owner.outputs.owner }}/${{ github.event.repository.name }}:spectrum-${{ github.sha }}
+
+      - name: Download Packwiz
+        run: wget -O packwiz.zip https://nightly.link/packwiz/packwiz/workflows/go/main/Linux%2064-bit%20x86.zip
+
+      - name: Unzip Packwiz
+        run: unzip packwiz.zip -d packwiz
+
+      - name: Export mrpack
+        run: ../packwiz/packwiz mr export -o spectrum.mrpack
+        working-directory: spectrum
+
+      - name: Upload mrpack
+        uses: actions/upload-artifact@v4
+        with:
+          name: mrpack
+          path: spectrum/spectrum.mrpack
+
