--- a/spectrum/datapacks/joshs-more-foods.pw.toml
+++ b/spectrum/datapacks/joshs-more-foods.pw.toml
@@ -1,6 +1,6 @@
 name = "Josh's More Foods"
 filename = "joshs-more-foods_v5.1.8_data_pack.zip"
-side = "both"
+side = "server"
 
 [download]
 url = "https://cdn.modrinth.com/data/3BlwZj8w/versions/lD1S53Pf/joshs-more-foods_v5.1.8_data_pack.zip"
