--- a/spectrum/datapacks/repurposed-structures-better-desert-temples-compat.pw.toml
+++ b/spectrum/datapacks/repurposed-structures-better-desert-temples-compat.pw.toml
@@ -1,6 +1,6 @@
 name = "Repurposed Structures - Better Desert Temples Compat"
 filename = "Repurposed_Structures-Better_Desert_Temples_v11.zip"
-side = "both"
+side = "server"
 
 [download]
 url = "https://cdn.modrinth.com/data/mKaYfrOy/versions/TH5RgMfh/Repurposed_Structures-Better_Desert_Temples_v11.zip"
