--- a/spectrum/datapacks/repurposed-structures-better-dungeons-compat.pw.toml
+++ b/spectrum/datapacks/repurposed-structures-better-dungeons-compat.pw.toml
@@ -1,6 +1,6 @@
 name = "Repurposed Structures - Better Dungeons Compat"
 filename = "Repurposed_Structures-Better_Dungeons_v6.zip"
-side = "both"
+side = "server"
 
 [download]
 url = "https://cdn.modrinth.com/data/qUbxpIPN/versions/FYkLmuKF/Repurposed_Structures-Better_Dungeons_v6.zip"
