--- a/spectrum/datapacks/repurposed-structures-better-jungle-temples.pw.toml
+++ b/spectrum/datapacks/repurposed-structures-better-jungle-temples.pw.toml
@@ -1,6 +1,6 @@
 name = "Repurposed Structures - Better Jungle Temples Compat"
 filename = "Repurposed_Structures-Better_Jungle_Temples_v7.zip"
-side = "both"
+side = "server"
 
 [download]
 url = "https://cdn.modrinth.com/data/gAvG8ZeC/versions/ZYuHt4dP/Repurposed_Structures-Better_Jungle_Temples_v7.zip"
