--- a/spectrum/datapacks/repurposed-structures-better-nether-fortress-compat.pw.toml
+++ b/spectrum/datapacks/repurposed-structures-better-nether-fortress-compat.pw.toml
@@ -1,6 +1,6 @@
 name = "Repurposed Structures - Better Nether Fortress Compat"
 filename = "Repurposed_Structures-Better_Nether_Fortress_v10.zip"
-side = "both"
+side = "server"
 
 [download]
 url = "https://cdn.modrinth.com/data/7vT7Bwz9/versions/qJcwHdWl/Repurposed_Structures-Better_Nether_Fortress_v10.zip"
