--- a/spectrum/datapacks/repurposed-structures-better-ocean-monuments-compat.pw.toml
+++ b/spectrum/datapacks/repurposed-structures-better-ocean-monuments-compat.pw.toml
@@ -1,6 +1,6 @@
 name = "Repurposed Structures - Better Ocean Monuments Compat"
 filename = "Repurposed_Structures-Better_Monuments_v7.zip"
-side = "both"
+side = "server"
 
 [download]
 url = "https://cdn.modrinth.com/data/WQ8xE11Z/versions/EU6PZcdv/Repurposed_Structures-Better_Monuments_v7.zip"
