--- a/spectrum/datapacks/repurposed-structures-better-witch-huts-compat.pw.toml
+++ b/spectrum/datapacks/repurposed-structures-better-witch-huts-compat.pw.toml
@@ -1,6 +1,6 @@
 name = "Repurposed Structures - Better Witch Huts Compat"
 filename = "Repurposed_Structures-Better_Witch_Huts_v5.zip"
-side = "both"
+side = "server"
 
 [download]
 url = "https://cdn.modrinth.com/data/ePaZVJM4/versions/CTab3l6x/Repurposed_Structures-Better_Witch_Huts_v5.zip"
