--- a/spectrum/datapacks/stellarity-x-nullscape.pw.toml
+++ b/spectrum/datapacks/stellarity-x-nullscape.pw.toml
@@ -1,6 +1,6 @@
 name = "Stellarity x Nullscape ~ Compatibility"
 filename = "Stellarity x Nullscape (1.21).zip"
-side = "both"
+side = "server"
 
 [download]
 url = "https://cdn.modrinth.com/data/bxgn7qmu/versions/HJ170LXl/Stellarity%20x%20Nullscape%20%281.21%29.zip"
