chore(proxy): generate some missing config

--- a/proxy/config/velocity.toml
+++ b/proxy/config/velocity.toml
@@ -78,10 +78,12 @@ enable-player-address-logging = false
 # Configure your servers here. Each key represents the server's name, and the value
 # represents the IP address of the server to connect to.
 survival = "100.96.235.54:25565"
+fallback = "127.0.0.1:25566"
 
 # In what order we should try servers when a player logs in or is kicked from a server.
 try = [
-    "survival"
+    "survival",
+    "fallback"
 ]
 
 [forced-hosts]
