feat(proxy): take variable and sensitive config from env vars

--- a/proxy/config/plugins/epicguard/settings.conf
+++ b/proxy/config/plugins/epicguard/settings.conf
@@ -89,7 +89,7 @@ misc {
     # false - Allow NEW players connecting during attack.
     lockdown-on-attack=true
     # Set to false to disable update checker.
-    update-checker=true
+    update-checker=false
 }
 # NameSimilarityCheck will detect similar nicknames of the connecting users
 # (!) Experimental! https://neox.gitbook.io/epicguard-wiki/configuring/name-similarity-check
@@ -181,15 +181,15 @@ settings-check {
     enabled=true
 }
 storage {
-    database="database!"
-    host="127.0.0.1"
-    password="password!"
+    database=""
+    host=""
+    password=""
     port=3306
     # false - use SQLite for storage
     # true - use MYSQL for storage
     # (!) This option requires a restart. Changing storage type will reset your current data.
     use-mysql=false
-    user="username!"
+    user=""
 }
 # Configuration Version
 version=1
