--- a/spectrum/config/FabricProxy-Lite.toml
+++ b/spectrum/config/FabricProxy-Lite.toml
@@ -2,4 +2,4 @@ hackOnlineMode = true
 hackEarlySend = true
 hackMessageChain = true
 disconnectMessage = "This server requires you to connect with Velocity."
-secret = "mmh83oW2paeb"
+secret = "${CFG_PROXY_SECRET}"
