--- a/fallback/Dockerfile
+++ b/fallback/Dockerfile
@@ -3,6 +3,8 @@ FROM ghcr.io/itzg/minecraft-server:2025.4.0-java21-graalvm
 ENV GUI=false
 ENV STOP_DURATION=120
 
+ENV REPLACE_ENV_VARIABLES="TRUE"
+ENV ENV_VARIABLE_PREFIX="CFG_"
 ENV VERSION=1.21.1
 ENV TYPE=FABRIC
 ENV FABRIC_LOADER_VERSION=0.16.10
