--- a/fallback/config/FabricProxy-Lite.toml
+++ b/fallback/config/FabricProxy-Lite.toml
@@ -2,4 +2,4 @@ hackOnlineMode = true
 hackEarlySend = false
 hackMessageChain = true
 disconnectMessage = "This server requires you to connect with Velocity."
-secret = "mmh83oW2paeb"
+secret = "${CFG_PROXY_SECRET}"
