fix(proxy): enable rcon

--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -10,5 +10,6 @@ ENV TYPE=VELOCITY
 ENV PLUGINS_FILE=/extras/plugins.txt
 ENV VELOCITY_VERSION=3.4.0-SNAPSHOT
 ENV VELOCITY_BUILD_ID=490
+ENV ENABLE_RCON=TRUE
 
 COPY . /
