feat(proxy): configure Carbon with db env vars, disable party chat, remove mute commands, rename other commands to their most common version

--- a/proxy/config/plugins/carbonchat/command-settings.conf
+++ b/proxy/config/plugins/carbonchat/command-settings.conf
@@ -17,7 +17,7 @@ settings {
         ]
     }
     "carbon:party" {
-        enabled=true
+        enabled=false
         name=party
         aliases=[
             group
@@ -36,47 +36,39 @@ settings {
         aliases=[]
     }
     "carbon:join" {
-        enabled=true
+        enabled=false
         name=join
         aliases=[]
     }
     "carbon:ignorelist" {
         enabled=true
-        name=ignorelist
-        aliases=[
-            listignores
-        ]
+        name=blocklist
+        aliases=[]
     }
     "carbon:unmute" {
-        enabled=true
+        enabled=false
         name=unmute
         aliases=[]
     }
     "carbon:ignore" {
         enabled=true
-        name=ignore
-        aliases=[
-            block
-        ]
+        name=block
+        aliases=[]
     }
     "carbon:spy" {
-        enabled=true
+        enabled=false
         name=spy
         aliases=[]
     }
     "carbon:whisper" {
         enabled=true
-        name=whisper
+        name=tell
         aliases=[
-            w,
-            message,
-            msg,
-            m,
-            tell
+            t
         ]
     }
     "carbon:continue" {
-        enabled=true
+        enabled=false
         name=continue
         aliases=[
             c
@@ -84,33 +76,30 @@ settings {
     }
     "carbon:togglemsg" {
         enabled=true
-        name=togglemsg
-        aliases=[
-            togglepm
-        ]
+        name=togglepm
+        aliases=[]
     }
     "carbon:leave" {
-        enabled=true
+        enabled=false
         name=leave
         aliases=[]
     }
     "carbon:clearchat" {
         enabled=true
-        name=clearchat
+        name=chatclear
         aliases=[
-            chatclear,
             cc
         ]
     }
     "carbon:debug" {
-        enabled=true
+        enabled=false
         name=carbondebug
         aliases=[
             cdebug
         ]
     }
     "carbon:muteinfo" {
-        enabled=true
+        enabled=false
         name=muteinfo
         aliases=[
             muted
@@ -118,21 +107,17 @@ settings {
     }
     "carbon:unignore" {
         enabled=true
-        name=unignore
-        aliases=[
-            unblock
-        ]
+        name=unblock
+        aliases=[]
     }
     "carbon:mute" {
-        enabled=true
+        enabled=false
         name=mute
         aliases=[]
     }
     "carbon:nickname" {
         enabled=true
-        name=nickname
-        aliases=[
-            nick
-        ]
+        name=nick
+        aliases=[]
     }
 }
