--- a/proxy/config/plugins/carbonchat/config.conf
+++ b/proxy/config/plugins/carbonchat/config.conf
@@ -10,7 +10,7 @@ return-to-default-channel=false
 # The service that will be used to store and load player information.
 # One of: JSON, H2, MYSQL, PSQL
 # Note: If you choose MYSQL or PSQL make sure you configure the "database-settings" section of this file!
-storage-type=JSON
+storage-type=PSQL
 # When "storage-type" is set to MYSQL or PSQL, this section configures the database connection.
 # If JSON or H2 storage is used, this section can be ignored.
 database-settings {
@@ -18,11 +18,11 @@ database-settings {
     # MySQL: jdbc:mysql://host:3306/DB
     # MariaDB: jdbc:mariadb://host:3306/DB
     # PostgreSQL: jdbc:postgresql://host:5432/database
-    url="jdbc:mysql://localhost:3306/carbon"
+    url="${CFG_CARBON_DATABASE_JDBC_URL}"
     # The connection username.
-    username=username
+    username=${CFG_CARBON_DATABASE_USERNAME}
     # The connection password.
-    password=password
+    password=${CFG_CARBON_DATABASE_PASSWORD}
     # Settings for the connection pool. This is an advanced configuration that most users won't need to touch.
     connection-pool {
         maximum-pool-size=8
@@ -96,7 +96,7 @@ ping-settings {
 }
 party-chat {
     # Whether party chat is enabled
-    enabled=true
+    enabled=false
     expire-invites-after-seconds=45
     play-sound=false
     # Sound for receiving a party message
@@ -121,9 +121,9 @@ clear-chat-settings {
     # The number of times the message will be sent to each player.
     iterations=50
     # The message to be sent after chat is cleared.
-    broadcast="<gold>Chat has been cleared by </gold><green><display_name><green><gold>."
+    broadcast=""
 }
 # Settings for integrations with other plugins/mods. Settings only apply when the relevant plugin/mod is present.
 integrations=null
 # Whether Carbon should check for updates using the GitHub API on startup.
-update-checker=true
+update-checker=false
