feat(proxy): set up chat formatting

--- a/proxy/config/plugins/carbonchat/channels/global.conf
+++ b/proxy/config/plugins/carbonchat/channels/global.conf
@@ -20,9 +20,9 @@ format {
     #     }
     # 
     basic {
-        "default_format"="<display_name>: <message>"
-        console="[<channel>] <username>: <message>"
-        discord="<message>"
+        "default_format"="<gray>[</gray><luckperms_prefix><gray>]</gray> <carbonchat_nickname> <aqua>></aqua> <message>"
+        console="[<channel> <viaversion_player_protocol_version> <clientcatcher_client>] <carbonchat_nickname> (<username>) > <message>"
+        discord="<carbonchat_nickname> (<username>): <message>"
     }
     # Per-Language chat formats.
     # You can safely leave this section empty if you don't want to use this feature.
