feat(spectrum): embed translations as a resource pack, make NoChatReports Client only

--- a/.github/workflows/spectrum.yml
+++ b/.github/workflows/spectrum.yml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - spectrum/**
+      - spectrum-translations/**
       - .github/workflows/spectrum.yml
 
 permissions:
