--- a/spectrum/mods/no-chat-reports.pw.toml
+++ b/spectrum/mods/no-chat-reports.pw.toml
@@ -1,6 +1,6 @@
 name = "No Chat Reports"
 filename = "no-chat-reports.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/qQyHxfxd/versions/D8K0KJXM/NoChatReports-FABRIC-1.21.1-v2.9.1.jar"
