feat(proxy): do not proxy pings

--- a/proxy/config/velocity.toml
+++ b/proxy/config/velocity.toml
@@ -64,7 +64,7 @@ kick-existing-players = true
 #                  description and mod list.
 # - "all":         Uses the backend server's response as the proxy response. The Velocity
 #                  configuration is used if no servers could be contacted.
-ping-passthrough = "all"
+ping-passthrough = "disabled"
 
 # If enabled (default is false), then a sample of the online players on the proxy will be visible
 # when hovering over the player count in the server list.
