--- a/.github/workflows/announcer.yml
+++ b/.github/workflows/announcer.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - announcer/**
       - .github/workflows/announcer.yml
+  workflow_dispatch:
 
 permissions:
   contents: read
