--- a/.github/workflows/spectrum.yml
+++ b/.github/workflows/spectrum.yml
@@ -8,6 +8,7 @@ on:
       - spectrum/**
       - spectrum-translations/**
       - .github/workflows/spectrum.yml
+  workflow_dispatch:
 
 permissions:
   contents: read
