--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - translations/**
       - .github/workflows/translations.yml
+  workflow_dispatch:
 
 permissions:
   contents: write
