--- a/proxy/config/plugins/customcommands/config.toml
+++ b/proxy/config/plugins/customcommands/config.toml
@@ -2,16 +2,16 @@
 
 # This is the prefix that will be displayed in front of all messages
 # Only supports MiniMessage, see https://docs.advntr.dev/minimessage/format.html and https://webui.advntr.dev/ for more information
-Prefix = "<gray>[<gradient:#38ffdb:#8aff8c>CustomCommands<gray>]"
+Prefix = "<aqua>Server >"
 
 # This is the default message that will be displayed when a player does not have permission to execute a command
-No-Permission = "<red>You do not have permission to execute this command."
+No-Permission = "<red>Unknown or incomplete command."
 
 # This is the default message that will be displayed when a command is run from the console, but the command is not allowed to be run from the console
 No-Console-Command = "This command cannot be run from console!"
 
 # This is the default message that will be displayed when a command has been executed successfully
-Command-Executed = "<green>Command executed successfully."
+Command-Executed = "<green>Command successful"
 
 # Do not change this
 Config-Version = 1.0
