--- a/proxy/config/plugins/carbonchat/command-settings.conf
+++ b/proxy/config/plugins/carbonchat/command-settings.conf
@@ -5,12 +5,12 @@ settings {
         aliases=[]
     }
     "carbon:reload" {
-        enabled=true
+        enabled=false
         name=carbon
         aliases=[]
     }
     "carbon:updateusername" {
-        enabled=true
+        enabled=false
         name=updateusername
         aliases=[
             updatename
@@ -56,7 +56,7 @@ settings {
         aliases=[]
     }
     "carbon:spy" {
-        enabled=false
+        enabled=true
         name=spy
         aliases=[]
     }
@@ -64,11 +64,15 @@ settings {
         enabled=true
         name=tell
         aliases=[
-            t
+            t,
+            w,
+            msg,
+            message,
+            whisper
         ]
     }
     "carbon:continue" {
-        enabled=false
+        enabled=true
         name=continue
         aliases=[
             c
@@ -77,7 +81,9 @@ settings {
     "carbon:togglemsg" {
         enabled=true
         name=togglepm
-        aliases=[]
+        aliases=[
+            togglemsg
+        ]
     }
     "carbon:leave" {
         enabled=false
@@ -85,7 +91,7 @@ settings {
         aliases=[]
     }
     "carbon:clearchat" {
-        enabled=true
+        enabled=false
         name=chatclear
         aliases=[
             cc
