--- a/proxy/config/plugins/carbonchat/config.conf
+++ b/proxy/config/plugins/carbonchat/config.conf
@@ -58,10 +58,7 @@ nickname-settings {
     min-length=3
     # Maximum number of characters in nickname (excluding formatting).
     max-length=16
-    black-list=[
-        notch,
-        admin
-    ]
+    black-list=[${CFG_CARBON_NICK_BLACKLIST}]
     # Regex pattern nicknames must match in order to be applied, can be bypassed with the permission 'carbon.nickname.filter'.
     filter="^[a-zA-Z0-9_]*$"
     # Format used when displaying nicknames.
